--- a/api/Views/Pages/add_products.ejs
+++ b/api/Views/Pages/add_products.ejs
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/add_products.css" />
+    <title>Add products</title>
   </head>
-  <body></body>
+  <body>
+    <script src="/js/add_products.js"></script>
+  </body>
 </html>
