--- a/api/Views/Pages/products.ejs
+++ b/api/Views/Pages/products.ejs
@@ -34,6 +34,20 @@
         </table>
       </div>
     </div>
+
+    <div class="delete-modal" id="delete-modal">
+      <form action="">
+        <div class="delete-message" id="delete-message"></div>
+        <div class="button-holder">
+          <button class="delete-button cancel" id="delete-cancel">
+            CANCEL
+          </button>
+          <button class="delete-button confirm" id="delete-confirm">
+            DELETE
+          </button>
+        </div>
+      </form>
+    </div>
     <script src="/js/products.js"></script>
   </body>
 </html>
