--- a/api/Public/css/products.css
+++ b/api/Public/css/products.css
@@ -16,3 +16,44 @@
   font-size: 2em;
   padding: 1vh;
 }
+
+.delete-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+}
+
+.delete-modal form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  height: auto;
+  background: white;
+  border: 1px solid;
+}
+
+.delete-message {
+  font-size: 5vh;
+  padding: 5vh 0;
+}
+
+.button-holder {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: auto;
+  padding: 5vh 0;
+}
+
+.delete-button {
+  font-size: 4vh;
+  padding: 1vh;
+}
