--- a/api/Views/Pages/products.ejs
+++ b/api/Views/Pages/products.ejs
@@ -35,6 +35,21 @@
       </div>
     </div>
 
+    <div class="edit-modal" id="edit-modal">
+      <form action="">
+        <div class="edit-modal-inputs" id="edit-modal-inputs">
+          <input type="number" class="edit-modal-textInput" />
+          <input type="text" class="edit-modal-textInput" />
+          <img class="edit-modal-img" />
+          <input type="file" />
+        </div>
+        <div class="edit-modal-buttons" id="edit-modal-buttons">
+          <button class="edit-button" id="edit-save">SAVE</button>
+          <button class="edit-button" id="edit-cancel">CANCEL</button>
+        </div>
+      </form>
+    </div>
+
     <div class="delete-modal" id="delete-modal">
       <form action="">
         <div class="delete-message" id="delete-message"></div>
