--- a/api/Public/css/products.css
+++ b/api/Public/css/products.css
@@ -62,3 +62,80 @@
   font-size: 4vh;
   padding: 1vh;
 }
+
+.edit-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+}
+
+.edit-modal form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  height: auto;
+  background: white;
+  border: 1px solid;
+}
+
+.edit-modal-inputs {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+}
+
+.edit-modal-textInput {
+  width: 50%;
+  font-size: 1.5em;
+  padding: 1vh;
+  text-align: center;
+  margin: 1vh 0;
+}
+
+.edit-modal-img {
+  width: 60px;
+  height: 60px;
+  margin: 1vh 0;
+}
+
+.edit-modal-buttons {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  align-items: center;
+  height: auto;
+}
+.edit-button {
+  padding: 1vh;
+  font-size: 1.2em;
+  margin: 2vh;
+}
+
+.edit-message {
+  font-size: 5vh;
+  padding: 5vh 0;
+}
+
+.button-holder {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: auto;
+  padding: 5vh 0;
+}
+
+.edit-button {
+  font-size: 4vh;
+  padding: 1vh;
+}
