--- a/api/Views/Pages/login.ejs
+++ b/api/Views/Pages/login.ejs
@@ -20,7 +20,7 @@
   </style>
   <body>
     <div class="container">
-      <form>
+      <form id="form">
         <input
           id="email"
           class="input"
@@ -38,6 +38,37 @@
         <input id="submit" class="input" type="submit" />
       </form>
     </div>
-    <script src="/js/login.js"></script>
+    <script>
+      const form = document.getElementById("form");
+      const email = document.getElementById("email");
+      const password = document.getElementById("password");
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+
+        const data = {
+          email: email.value,
+          password: password.value,
+        };
+
+        try {
+          const response = await fetch("/api/admin/login", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(data),
+          });
+
+          if (response.ok) {
+            window.location.href = "/admin/products";
+          } else {
+            console.error("Login failed");
+          }
+        } catch (error) {
+          console.error("An error occurred", error);
+        }
+      });
+    </script>
   </body>
 </html>
