--- a/api/Public/css/products.css
+++ b/api/Public/css/products.css
@@ -1,3 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  width: 100%;
+  height: auto;
+}
+
 .productsContainer {
   display: flex;
   justify-content: center;
@@ -35,7 +46,7 @@
   z-index: 9999;
 }
 
-.delete-modal form {
+.delete-modal-form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -76,7 +87,7 @@
   z-index: 9999;
 }
 
-.edit-modal form {
+#edit-modal-form {
   display: flex;
   flex-direction: column;
   align-items: center;
