--- a/api/Views/Pages/login.ejs
+++ b/api/Views/Pages/login.ejs
@@ -35,7 +35,7 @@
           placeholder="Password"
           required
         />
-        <input id="submit" class="input" type="submit" />
+        <input id="submit" class="input" type="submit" value="LOG IN" />
       </form>
     </div>
     <script>
