--- a/api/Views/Pages/addProducts.ejs
+++ b/api/Views/Pages/addProducts.ejs
@@ -19,9 +19,7 @@
               <optgroup label="Albums" id="albumsOptGroup"></optgroup>
             </select>
             <div class="inputHolder" id="inputHolder"></div>
-            <div id="btnHolder">
-              <!-- <button id="newProductButton">SUBMIT</button> -->
-            </div>
+            <div id="btnHolder"></div>
           </div>
         </div>
       </div>
