--- a/api/Views/Pages/login.ejs
+++ b/api/Views/Pages/login.ejs
@@ -52,16 +52,13 @@
         };
 
         try {
-          const response = await fetch(
-            `${process.env.ADMIN_API_URL}/admin/login`,
-            {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify(data),
-            }
-          );
+          const response = await fetch("/api/admin/login", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(data),
+          });
 
           if (response.ok) {
             window.location.href = "/admin/products";
