--- a/api/Views/Pages/login.ejs
+++ b/api/Views/Pages/login.ejs
@@ -61,7 +61,7 @@
           });
 
           if (response.ok) {
-            window.location.href = "/admin/products";
+            window.location.href = "/products";
           } else {
             console.error("Login failed");
           }
