--- a/api/Views/Pages/products.ejs
+++ b/api/Views/Pages/products.ejs
@@ -40,12 +40,8 @@
           <input type="text" class="edit-modal-textInput" />
           <input type="text" class="edit-modal-textInput" />
           <img class="edit-modal-textInput edit-modal-img" />
-          <input
-            type="file"
-            name="img"
-            accept="image/*"
-            class="edit-modal-textInput"
-          />
+          <input type="file" name="img" <!-- accept="image/*" -- />
+          class="edit-modal-textInput" />
         </div>
         <div class="edit-modal-buttons" id="edit-modal-buttons">
           <button class="edit-button" id="edit-save">SAVE</button>
