--- a/client/src/App.css
+++ b/client/src/App.css
@@ -206,6 +206,7 @@ nav ul {
   font-size: 3vw;
   margin: 10vw 15vw;
   line-height: 4.5vw;
+  text-shadow: 2px 2px 2px black;
 }
 
 .bg {
@@ -214,7 +215,7 @@ nav ul {
   border-radius: 7px;
   width: 93vw;
   height: 60vw;
-  opacity: 0.2;
+  opacity: 0.4;
   margin: 2vw;
 }
 
@@ -422,6 +423,15 @@ iframe {
   justify-items: center;
   margin: 10vw 2vw;
 }
+.sentRequest p{
+  margin-top: 3vw;
+  font-size: 2.5vw;
+}
+.sentReqImg{
+  width: 10vw;
+  height: 10vw;
+}
+
 .btn_return{
   width: 25vw;
   height: 3vw;
