--- a/functions/Views/Components/navbar.ejs
+++ b/functions/Views/Components/navbar.ejs
@@ -20,7 +20,7 @@
 
       logOutA.addEventListener("click", async () => {
         try {
-          const response = await fetch("/api/admin/logout", {
+          const response = await fetch("/admin/logout", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
