--- a/functions/Views/Pages/login.ejs
+++ b/functions/Views/Pages/login.ejs
@@ -52,7 +52,7 @@
         };
 
         try {
-          const response = await fetch("/api/admin/login", {
+          const response = await fetch("/admin/login", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
